fix(ProductCardStandard): Manter gap semelhante caso desconto não exista

--- a/src/components/ProductCardStandard/styles.module.css
+++ b/src/components/ProductCardStandard/styles.module.css
@@ -61,7 +61,6 @@
 .priceSection {
     display: flex;
     flex-direction: column;
-    gap: 15px;
     text-align: center;
 }
 
